# Scout

./: .gitignore  CNAME  Cargo.toml  Download Models.txt  FEATURES.md  README.md
.github/: ci.yml
.github/workflows/: ci-lint.yml  ci-linux.yml  ci-macos-arm.yml  ci-macos-intel.yml  ci-macos.yml  ci-windows.yml  ci.yml  release.yml
assets/: scout.desktop
docs/: ARCHITECTURE.md  BUILD.md  CLUSTERING.md  CONTRIBUTING.md  EXPORT-GUIDE.md  INSTALL_FFMPEG.md  MODELS.md  SEARCH_TIPS.md  SIDECAR.md  USER-GUIDE.md
src/: cli.rs  config.rs  embedder.rs  embedding.rs  lib.rs  live.rs  logger.rs  main.rs  models.rs  processor.rs  runtime.rs  scanner.rs  search.rs  sidecar.rs  stats.rs  types.rs  video.rs
src/commands/: clean.rs  cluster.rs  mod.rs  outliers.rs  repl.rs  scan.rs  search.rs  watch.rs
src/core/: cluster.rs  embedding.rs  hash.rs  media.rs  mod.rs
src/models/: manager.rs  mod.rs  text.rs  vision.rs
src/processing/: cluster.rs  image.rs  mod.rs  scan.rs  umap.rs  video.rs
src/runtime/: mod.rs  providers.rs
src/storage/: index.rs  mod.rs  sidecar.rs
src/ui/: log.rs  mod.rs
tests/: integration_test.rs
