[package]
name = "scout"
version = "1.3.0"
edition = "2021"
rust-version = "1.81.0"
description = "AI-powered semantic image search"
authors = ["Hyphonical"]
license = "MIT"
repository = "https://github.com/Hyphonical/Scout"

[dependencies]
# CLI
anstyle = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = "0.25"
ndarray = "0.17"

# Video processing (optional)
rsmpeg = { version = "0.18.0", optional = true, features = ["link_system_ffmpeg"] }

# ML/AI
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
ort = { version = "2.0.0-rc.11", features = ["std"] }

# TUI
crossterm = "0.29.0"
ratatui = "0.30.0"

# Utilities
open = "5.3"
walkdir = "2.5"

# Platform-specific execution providers
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["std", "coreml", "xnnpack"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["std", "cuda", "tensorrt", "xnnpack"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["std", "cuda", "tensorrt", "xnnpack"] }

[features]
default = []
video = ["rsmpeg"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true