[package]
name = "scout"
version = "2.0.0"
edition = "2021"
rust-version = "1.81.0"
description = "AI-powered semantic image search"
authors = ["Hyphonical"]
license = "MIT"
repository = "https://github.com/Hyphonical/Scout"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.1"

# Image processing
image = "0.25"
ndarray = "0.17"

# ML/AI
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
ort = { version = "2.0.0-rc.11", features = ["std"] }

# Utilities
xxhash-rust = { version = "0.8", features = ["xxh3"] }
open = "5.3"
rand = "0.9.2"
notify-debouncer-mini = { version = "0.6.0", features = ["crossbeam-channel"] }

# Platform-specific execution providers
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["std", "coreml", "xnnpack"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["std", "cuda", "tensorrt", "xnnpack"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["std", "cuda", "tensorrt", "xnnpack"] }

[features]
default = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.fast]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16
strip = true